Changes have been made to task BJS2-66096:
- Added the CommentValidator class and corresponding tests
- Fixed tests
- Removed the GlobalExceptionHandler (duplicate)